80-Added an icon with a name, and the option to logOut

--- a/src/Web/Client/Pages/Settings/AssetTypes.razor
+++ b/src/Web/Client/Pages/Settings/AssetTypes.razor
@@ -5,6 +5,7 @@
 @layout SettingsLayout
 @inject IAssetTypesService AssetTypesService
 @inject ISnackbar Snackbar
+@attribute [Authorize]
 
 <PageTitle>Asset Types</PageTitle>
 
