--- a/src/Web/Client/Shared/NavMenu.razor
+++ b/src/Web/Client/Shared/NavMenu.razor
@@ -1,7 +1,20 @@
-﻿<MudAppBar Elevation="2">
+﻿@using MRA.AssetsManagement.Web.Client.Services.AuthService
+@using Blazored.LocalStorage
+@inject IAuthService AuthService
+@inject ILocalStorageService LocalStorageService
+@inject CustomAuthStateProvider CustomAuthStateProvider
+
+<MudAppBar Elevation="2">
     <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@OnToggleClick" />
     <MudSpacer />
-    <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" href="https://github.com/MudBlazor/MudBlazor" Target="_blank" />
+        <MudMenu FullWidth="true" ActivationEvent="@MouseEvent.MouseOver" AnchorOrigin="Origin.BottomCenter" TransformOrigin="Origin.TopCenter">
+            <ActivatorContent>
+                <MudChip Style="font-size: 21px;" Icon="@Icons.Material.Filled.Person" Size="Size.Large" Color="Color.Primary">@_userName</MudChip>
+        </ActivatorContent>
+        <ChildContent>
+            <MudMenuItem @onclick="AuthService.LogoutUser">Sign Out</MudMenuItem>
+        </ChildContent>
+    </MudMenu>
 </MudAppBar>
 
 @code
@@ -12,5 +25,13 @@
     private async void OnToggleClick()
     {
         await OnToggle.InvokeAsync();
+    }
+    private string? _userName;
+    protected override async Task OnInitializedAsync()
+    {
+        await AuthService.AddTokenToLocal();
+        await CustomAuthStateProvider.GetAuthenticationStateAsync();
+        _userName = await LocalStorageService.GetItemAsync<string>("userName");
+        StateHasChanged();
     }
 }
