--- a/src/Web/Client/_Imports.razor
+++ b/src/Web/Client/_Imports.razor
@@ -13,3 +13,7 @@
 @using AssetsManagement.Web.Client.Services.AssetTypes
 @using System.Text.RegularExpressions
 @using System.ComponentModel.DataAnnotations
+@using MRA.AssetsManagement.Web.Client.Services
+@using MRA.AssetsManagement.Web.Client.Services.AuthService
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
