--- a/src/Web/Client/Pages/Settings/AssetTypes.razor
+++ b/src/Web/Client/Pages/Settings/AssetTypes.razor
@@ -1,11 +1,12 @@
-﻿@page "/settings/asset-types"
+@page "/settings/asset-types"
 @page "/settings/asset-types/{id}"
-@using MRA.AssetsManagement.Web.Shared.AssetTypes
-@using MRA.AssetsManagement.Web.Client.Common.Extensions
-@using MRA.AssetsManagement.Web.Client.Components.MenuItems
 @layout SettingsLayout
+@inject IIconService IconService
+@using MRA.AssetsManagement.Web.Client.Components.MenuItems
 @inject IAssetTypesService AssetTypesService;
 @inject IMenuItemService MenuItemService;
+
+
 
 <PageTitle>Asset Types</PageTitle>
 
@@ -28,6 +29,7 @@
 
     <MudDivider/>
     <MudForm Disabled=@_getAssetType.Archived Style="max-width: 420px" Class="pa-4">
+
         @if (_loading)
         {
             <MudSkeleton Class="mt-3" SkeletonType="SkeletonType.Rectangle" Animation=Animation.Wave Width="400px" Height="40px"/>
@@ -44,33 +46,24 @@
                 <MudCheckBox T="bool" @bind-Value="_autoGenerateShortName" Label="Auto Generate" CheckedChanged="AutoGenerateShortName"></MudCheckBox>
             </MudItem>
             <MudSelect @bind-Value="_getAssetType.Icon" Immediate=true Label="Icon" Margin="Margin.Dense" Variant="Variant.Outlined" Class="mt-3">
-                <MudSelectItem Value="@(Icons.Material.Outlined.Computer)">
-                    <div class="d-flex">
-                        <MudIcon Icon="@Icons.Material.Outlined.Computer" Class="mr-1"/>
-                        <span>Computer</span>
-                    </div>
-                </MudSelectItem>
-                <MudSelectItem Value="@(Icons.Material.Outlined.LaptopMac)">
-                    <div class="d-flex">
-                        <MudIcon Icon="@Icons.Material.Outlined.LaptopMac" Class="mr-1"/>
-                        <span>Laptop</span>
-                    </div>
-                </MudSelectItem>
-                <MudSelectItem Value="@(Icons.Material.Outlined.DesktopWindows)">
-                    <div class="d-flex">
-                        <MudIcon Icon="@Icons.Material.Outlined.DesktopWindows" Class="mr-1"/>
-                        <span>Monitor</span>
-                    </div>
-                </MudSelectItem>
+
+               @foreach (var icon in IconService.GetIcons())
+                {
+                    <MudSelectItem Value="@(icon.Key)">
+                        <div class="d-flex">
+                            <MudIcon Icon="@icon.Value" Class="mr-1" />
+                            <span>@icon.Key</span>
+                        </div>
+                    </MudSelectItem>
+                } 
+
             </MudSelect>
         }
-
     </MudForm>
 </MudStack>
 <SectionContent SectionName="@nameof(MenuItemList)">
     <MenuItemList Service="AssetTypesService" BaseRoute="/settings/asset-types"/>
 </SectionContent>
-
 
 @code {
     [Parameter] public string? Id { get; set; }
@@ -94,7 +87,6 @@
 
         StateHasChanged();
     }
-
 
     private void AutoGenerateShortName()
     {
@@ -133,5 +125,4 @@
         await AssetTypesService.Update(_getAssetType);
         MenuItemService.OnChangeMenuItem(MenuItemEvent.Update, _getAssetType.ToMenuItem());
     }
-
 }
