--- a/src/Web/Client/_Imports.razor
+++ b/src/Web/Client/_Imports.razor
@@ -15,3 +15,7 @@
 @using AssetsManagement.Web.Client.Services.Tags
 @using System.Text.RegularExpressions
 @using System.ComponentModel.DataAnnotations
+@using MRA.AssetsManagement.Web.Client.Services.Icons
+@using MRA.AssetsManagement.Web.Client.Common.Extensions
+@using MRA.AssetsManagement.Web.Shared.AssetTypes
+
