--- a/src/Web/Client/_Imports.razor
+++ b/src/Web/Client/_Imports.razor
@@ -13,6 +13,7 @@
 @using MRA.AssetsManagement.Web.Client.Shared
 @using AssetsManagement.Web.Client.Services.AssetTypes
 @using AssetsManagement.Web.Client.Services.Tags
+@using AssetsManagement.Web.Client.Services.Employees
 @using System.Text.RegularExpressions
 @using System.ComponentModel.DataAnnotations
 @using MRA.AssetsManagement.Web.Client.Services.Icons
