--- a/src/Web/Client/Pages/Assets.razor
+++ b/src/Web/Client/Pages/Assets.razor
@@ -9,7 +9,7 @@
     <ToolBarContent>
         <MudText Typo="Typo.h6">Assets</MudText>
         <MudChip Href="#" Color="Color.Primary">New</MudChip>
-        <div style="width: 75%"></div>
+        <MudSpacer />
         <MudTextField @bind-Value="searchString1" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
     </ToolBarContent>
     <HeaderContent>
