80-Added an icon with a name, and the option to logOut (#19)
* 80-Added an icon with a name, and the option to logOut

* [80] corrected warnings

* [80] Corrected the mistake

* [80] Deleted @inject IAssetTypesService AssetTypesService;

* [80] Сorrected the warning

* /

* Add using

--- a/src/Web/Client/Pages/Assets.razor
+++ b/src/Web/Client/Pages/Assets.razor
@@ -1,4 +1,6 @@
 @page "/assets"
+@attribute [Authorize]
+
 @using MRA.AssetsManagement.Web.Shared.Assets
 @using MRA.AssetsManagement.Web.Client.Services.Assets
 @inject IAssetsService AssetsService
