--- a/src/Web/Client/Pages/Employees.razor
+++ b/src/Web/Client/Pages/Employees.razor
@@ -1,4 +1,5 @@
 ﻿@page "/employees"
+@attribute [Authorize]
 @page "/employees/{id}"
 @using MRA.AssetsManagement.Web.Client.Common.Extensions
 @using MRA.AssetsManagement.Web.Client.Components.MenuItems
