--- a/src/Web/Client/Pages/Settings/AssetTypes.razor
+++ b/src/Web/Client/Pages/Settings/AssetTypes.razor
@@ -5,6 +5,8 @@
 @using MRA.AssetsManagement.Web.Client.Components.MenuItems
 @inject IAssetTypesService AssetTypesService;
 @inject IMenuItemService MenuItemService;
+@inject ISnackbar Snackbar
+@attribute [Authorize]
 
 
 
