--- a/src/Web/Client/Pages/Settings/Tags.razor
+++ b/src/Web/Client/Pages/Settings/Tags.razor
@@ -1,6 +1,7 @@
 @page "/settings/tags"
 @page "/settings/tags/{id}"
 @layout SettingsLayout
+@attribute [Authorize]
 @using MRA.AssetsManagement.Web.Client.Common.Extensions
 @using MRA.AssetsManagement.Web.Client.Components.MenuItems
 @using MRA.AssetsManagement.Web.Shared.Tags
