--- a/src/Web/Client/_Imports.razor
+++ b/src/Web/Client/_Imports.razor
@@ -19,4 +19,8 @@
 @using MRA.AssetsManagement.Web.Client.Services.Icons
 @using MRA.AssetsManagement.Web.Client.Common.Extensions
 @using MRA.AssetsManagement.Web.Shared.AssetTypes
+@using MRA.AssetsManagement.Web.Client.Services
+@using MRA.AssetsManagement.Web.Client.Services.AuthService
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
 
