--- a/src/Web/Client/Components/MenuItems/MenuItemList.razor
+++ b/src/Web/Client/Components/MenuItems/MenuItemList.razor
@@ -4,11 +4,20 @@
 
 <MudStack Spacing="4">
     <MudStack Row="true">
-        <MudTextField @bind-Value="@_normalText" Label="Search" Margin="Margin.Dense" Variant="Variant.Outlined" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.Search"/>
+        <MudTextField T="string"
+            ValueChanged="(string newValue) => SearchChanged(newValue)"
+             Label="Search" 
+             Margin="Margin.Dense" 
+             Variant="Variant.Outlined"
+             Adornment="Adornment.End" 
+             AdornmentIcon="@Icons.Material.Filled.Search"
+                      Immediate="true"
+                      Clearable="true"/>
         <MudIconButton Icon="@Icons.Material.Filled.Add" Color="Color.Primary" aria-label="github" Href="@_hrefUrl"></MudIconButton>
     </MudStack>
     <MudDivider/>
     <MudNavMenu Rounded="true" Color="Color.Primary">
+
         @if (_loading)
         {
             foreach (var _ in Enumerable.Range(0, 3))
@@ -21,7 +30,7 @@
         }
         else
         {
-            @foreach (var menuItem in MenuItems)
+            @foreach (var menuItem in searchResult)
             {
                 <MudNavLink Disabled="@menuItem.Disabled" Href="@menuItem.Route"
                             Icon="@IconService.GetIcon(menuItem.Icon)">
@@ -32,17 +41,19 @@
     </MudNavMenu>
 </MudStack>
 
-
 @code {
-
-    string _normalText = "";
 
     bool _loading = false;
     string _hrefUrl = "";
 
     List<MenuItem> MenuItems { get; set; } = new();
-    [Parameter] public required IFetchMenuItemService Service { get; set; }
-    [Parameter] public required string BaseRoute { get; set; }
+    List<MenuItem> searchResult = new();
+
+    [Parameter] 
+    public required IFetchMenuItemService Service { get; set; }
+
+    [Parameter] 
+    public required string BaseRoute { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
@@ -51,6 +62,7 @@
         MenuItems = await Service.Fetch();
         MenuItemService.Changed += OnChanged;
         _loading = false;
+        searchResult = MenuItems;
     }
 
     private void OnChanged(MenuItemEvent menuItemEvent, MenuItem menuItem)
@@ -78,9 +90,13 @@
         StateHasChanged();
     }
 
+    private void SearchChanged(string searchText)
+    {
+        searchResult = MenuItems.Where(item => item.Title.Contains(searchText, StringComparison.OrdinalIgnoreCase)).ToList();
+    }
+
     public void Dispose()
     {
         MenuItemService.Changed -= OnChanged;
     }
-
 }
