--- a/src/Web/Client/Pages/AssetPurchase.razor
+++ b/src/Web/Client/Pages/AssetPurchase.razor
@@ -4,6 +4,7 @@
 @using MRA.AssetsManagement.Web.Client.Services.Assets
 @inject IAssetTypesService AssetTypesService
 @inject IAssetsService AssetsService
+@inject NavigationManager NavigationManager
 
 <MudStack Row="true" Class="d-flex justify-space-between mb-3 pa-1">
     <MudText Typo="Typo.h4">Purchase</MudText>
@@ -84,6 +85,8 @@
     {
         CreateAssetPurchaseRequest newAssetPurchase = new() {Vendor = Vendor,  Details = AssetPurchases };
         await AssetsService.CreatePurchase(newAssetPurchase);
+        NavigationManager.NavigateTo("/assets");
+
     }
 
     private void AddRow()
