--- a/src/Web/Client/_Imports.razor
+++ b/src/Web/Client/_Imports.razor
@@ -15,3 +15,4 @@
 @using AssetsManagement.Web.Client.Services.Tags
 @using System.Text.RegularExpressions
 @using System.ComponentModel.DataAnnotations
+@using Microsoft.AspNetCore.Components.Authorization;
