--- a/src/Web/Client/Shared/StatusComponent.razor
+++ b/src/Web/Client/Shared/StatusComponent.razor
@@ -1,15 +1,17 @@
+@using MRA.AssetsManagement.Web.Shared.Enums
+
 @switch (Status)
 {
-    case "Available":
+    case AssetStatus.Available:
         <MudChip Size="Size.Small" Style="background-color: #55CD97; font-weight: 500; color: white">Available</MudChip>
         break;
-    case "Taken":
+    case AssetStatus.Taken:
         <MudChip Size="Size.Small" Style="background-color: #1CA1C1; font-weight: 500; color: white">Taken</MudChip>
         break;
-    case "Broken":
+    case AssetStatus.Broken:
         <MudChip Size="Size.Small"  Style="background-color: #FF5C4C; font-weight: 500; color: white">Broken</MudChip>
         break;
-    case "Deprecated":
+    case AssetStatus.Deprecated:
         <MudChip Size="Size.Small" Style="background-color: #94A1B3; font-weight: 500; color: white">Deprecated</MudChip>
         break;
 }
@@ -17,6 +19,6 @@
 @code {
     
     [Parameter]
-    public string Status { get; set; } = null!;
+    public AssetStatus Status { get; set; }
     
 }
