--- a/src/Web/Client/Pages/AssetPurchase.razor
+++ b/src/Web/Client/Pages/AssetPurchase.razor
@@ -2,26 +2,36 @@
 @using MRA.AssetsManagement.Web.Shared.AssetPurchases
 @using MRA.AssetsManagement.Web.Shared.Assets
 @using MRA.AssetsManagement.Web.Client.Services.Assets
+@using Blazored.FluentValidation
 @inject IAssetTypesService AssetTypesService
 @inject IAssetsService AssetsService
 @inject NavigationManager NavigationManager
+@inject ISnackbar SnackBar
 
 <MudStack Row="true" Class="d-flex justify-space-between mb-3 pa-1">
     <MudText Typo="Typo.h4">Purchase</MudText>
-    <MudButton Variant="Variant.Filled" @onclick=Create StartIcon="@Icons.Material.Filled.CreateNewFolder" Color="Color.Tertiary" Size="Size.Medium">Create</MudButton>
+    <MudButton Variant="Variant.Filled" @onclick=Create ButtonType=ButtonType.Submit StartIcon="@Icons.Material.Filled.CreateNewFolder" Color="Color.Tertiary" Size="Size.Medium">Create</MudButton>
 </MudStack>
-<MudTextField @bind-Value="Vendor" Class="mb-3" T=string Label="Vendor" Variant="Variant.Outlined" Margin="Margin.Dense" Immediate />
+<MudStack Row=true Class="d-flex justify-space-between mb-3">    
+    <MudTextField @bind-Value="_vendor" Style="max-width: 450px" T=string Label="Vendor" Variant="Variant.Outlined" Margin="Margin.Dense" Immediate />
+    <MudButton @onclick=AddRow StartIcon="@Icons.Material.Filled.Add" Color=Color.Tertiary Variant="Variant.Text">Add row</MudButton>
+</MudStack>
 
 <MudTable Class="mb-3" Items="@AssetPurchases" Dense="true">
     <HeaderContent>
         <MudTh>Type</MudTh>
-        <MudTh>Asset</MudTh>
+        <MudTh>
+            <MudStack Row=true Class="justify-space-between">
+                <MudText>Asset</MudText>
+                <MudIconButton @onclick=OpenDialog Class="pa-0" Disabled=@(_selectedAssetType == null ? true : false) Icon="@Icons.Material.Filled.Add" Color="Color.Tertiary" />
+            </MudStack>
+        </MudTh>
         <MudTh>Count</MudTh>
         <MudTh>Price</MudTh>
     </HeaderContent>
     <RowTemplate>
         <MudTd DataLabel="Type">
-            <MudSelect @bind-Value=context.AssetType TextChanged="@(() => GetAssets(context.AssetType?.Id!))" ToStringFunc=assetTypeToStirng Label="Select Type" AnchorOrigin="Origin.BottomCenter" Margin=Margin.Dense Variant="Variant.Outlined" Clearable>
+            <MudSelect @bind-Value=context.AssetType TextChanged=@(() => {_selectedAssetType = context.AssetType; assetSelect.ResetAsync();}) ToStringFunc=AssetTypeToStirng Label="Select Type" AnchorOrigin="Origin.BottomCenter" Margin=Margin.Dense Variant="Variant.Outlined" Clearable>
                 @foreach (var assetType in AssetTypes)
                 {
                     <MudSelectItem Value="assetType" />
@@ -29,7 +39,7 @@
             </MudSelect>
         </MudTd>
         <MudTd DataLabel="Asset">
-            <MudSelect @bind-Value=context.Asset @ref=assetSelect Disabled=@(context.AssetType == null ? true : false) ToStringFunc=assetToStirng Label="Select Asset" AnchorOrigin="Origin.BottomCenter" Margin=Margin.Dense Variant=" Variant.Outlined" Clearable>
+            <MudSelect @ref=assetSelect @bind-Value=context.Asset @onmousedown="@(() => GetAssets(context.AssetType.Id))" Disabled="@(context.AssetType == null ? true : false)" ToStringFunc=AssetToStirng Label="Select Asset" AnchorOrigin="Origin.BottomCenter" Margin=Margin.Dense Variant=" Variant.Outlined" Clearable>
                 @foreach (var asset in Assets)
                 {
                     <MudSelectItem Value="asset" />
@@ -44,60 +54,97 @@
         </MudTd>
     </RowTemplate>
     <FooterContent>
-        <MudTh><MudButton OnClick="@(() => AddRow())" Variant="Variant.Filled" Color="Color.Tertiary" Icon="@Icons.Material.Filled.AddCircle">Add row</MudButton></MudTh>
+        <MudTh><MudText Typo="Typo.h5">Total:</MudText></MudTh>
         <MudTh />
         <MudTh/>
         <MudTh>
-            <MudStack Style="justify-content:center;" Row=true>
-                <MudText Typo="Typo.h5">Total:</MudText>
-                <MudText Typo="Typo.h5">@CalculateTotalPrice()</MudText>
-            </MudStack>
+            <MudText Typo="Typo.h5" Align="Align.Center">@CalculateTotalPrice()</MudText>
         </MudTh>
     </FooterContent>
 </MudTable>
 
+<MudDialog IsVisible=@_isOpen>
+    <TitleContent>
+        <MudText Typo=Typo.h4 Align="Align.Center">NewAsset</MudText>
+        <MudDivider />
+    </TitleContent>
+    <DialogContent>
+        <EditForm Model="_newAsset" OnValidSubmit="@(() => CreateNewAsset(_selectedAssetType.Id))" Context="editContext">
+            <FluentValidationValidator />
+            <MudText Class="mb-3" Typo="Typo.h5">Type: @_selectedAssetType.Name</MudText>
+            <MudTextField @bind-Value=_newAsset.Name Label="Name" Margin="Margin.Dense" Variant="Variant.Outlined" />
+            <MudStack Row=true Class="justify-end mt-3">
+                <MudButton Color="Color.Tertiary" Variant=Variant.Filled ButtonType="ButtonType.Submit">Create</MudButton>
+                <MudButton Variant=Variant.Filled OnClick="OpenDialog">Cancel</MudButton>
+            </MudStack>
+        </EditForm>
+    </DialogContent>
+</MudDialog>
+
+
 @code {
     private List<CreateAssetPurchaseDetail> AssetPurchases = new List<CreateAssetPurchaseDetail>();
 
-    private string Vendor { get; set; } = null!;
-    private MudSelect<GetAsset> assetSelect = null!;
-    private List<GetAssetType> AssetTypes = null!;
-    private List<GetAsset> Assets = null!;
+    private string _vendor { get; set; } = null!;
+    private bool _isOpen = false;
+    private bool _disabled = true;
 
-    Func<GetAssetType, string> assetTypeToStirng = at => at.Name;
-    Func<GetAsset, string> assetToStirng = a => a.Name;
+    private MudSelect<GetAsset> assetSelect = null!;
+    private GetAssetType _selectedAssetType = null!;
+
+    private CreateAssetRequest _newAsset = new CreateAssetRequest();
+    private List<GetAssetType> AssetTypes = null!;
+    private List<GetAsset> Assets = new List<GetAsset>();
+
+    Func<GetAssetType, string> AssetTypeToStirng = at => at.Name;
+    Func<GetAsset, string> AssetToStirng = a => a.Name;
 
     protected override async Task OnInitializedAsync()
     {
         AssetTypes =  await AssetTypesService.GetAll();
-        Assets = (await AssetsService.GetAssetsById("")).ToList();
         AssetPurchases.Add(new CreateAssetPurchaseDetail());
     }
 
     private async void GetAssets(string id)
     {
-        await assetSelect.ResetAsync();
-        Assets = (await AssetsService.GetAssetsById(id)).ToList();
+        Assets = (await AssetsService.GetAssetsByTypeId(id)).ToList();
         StateHasChanged();
     }
 
     private async void Create()
     {
-        CreateAssetPurchaseRequest newAssetPurchase = new() {Vendor = Vendor,  Details = AssetPurchases };
-        await AssetsService.CreatePurchase(newAssetPurchase);
-        NavigationManager.NavigateTo("/assets");
-
+        var details = AssetPurchases.Where(ap => ap.Asset != null || ap.Quantity != 0).ToList();
+        CreateAssetPurchaseRequest newAssetPurchase = new() { Vendor = _vendor, Details = details };
+        if (!string.IsNullOrEmpty(_vendor))
+        {
+            await AssetsService.CreatePurchase(newAssetPurchase);   
+            NavigationManager.NavigateTo("/assets");
+        }
+        SnackBar.Add("Vendor is required field!", Severity.Error);
     }
+
+    private async Task CreateNewAsset(string assetTypeId)
+    {
+        _newAsset.AssetTypeId = assetTypeId;
+        await AssetsService.CreateAsset(_newAsset);
+        OpenDialog();
+    }   
 
     private void AddRow()
     {
         var newRow = new CreateAssetPurchaseDetail();
         AssetPurchases.Add(newRow);
+        _selectedAssetType = null!;
     }
 
     private decimal CalculateTotalPrice()
     {
         var totalPrice =  AssetPurchases.Sum(ap => ap.Quantity * ap.Price);
         return totalPrice;
+    }
+
+    private void OpenDialog()
+    {
+        _isOpen = !_isOpen;
     }
 }
