--- a/src/Web/Client/Shared/MainLayout.razor
+++ b/src/Web/Client/Shared/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
 <MudThemeProvider />
-<MudDialogProvider />
+<MudDialogProvider FullWidth=true MaxWidth="MaxWidth.ExtraSmall" DisableBackdropClick="true" />
 <MudSnackbarProvider />
 
 <MudLayout>
