--- a/src/Web/Client/Pages/AssetSerialDetail.razor
+++ b/src/Web/Client/Pages/AssetSerialDetail.razor
@@ -7,7 +7,7 @@
 @inject NavigationManager NavigationManager
 @inject ISnackbar Snackbar
 
-<MudDrawer @bind-Open="@showDrawer" Width="400px" Height="100%" Anchor="Anchor.End" Elevation="1"
+<MudDrawer Open="true" Width="400px" Height="100%" Anchor="Anchor.End" Elevation="1"
     Variant="@DrawerVariant.Temporary" DisableOverlay="true">
     <MudDrawerHeader Class="pa-1">
         <div
@@ -53,24 +53,17 @@
                     </MudText>
                     <MudSelect Value="assetSerial.Status" T="AssetStatus" Margin="Margin.Dense" Variant="Variant.Outlined"
                         ValueChanged="@OnStatusItemChanged">
-                        <MudSelectItem Value="@(AssetStatus.Available)">@(AssetStatus.Available.ToString())</MudSelectItem>
-                        <MudSelectItem Value="@(AssetStatus.Taken)">@(AssetStatus.Taken.ToString())</MudSelectItem>
-                        <MudSelectItem Value="@(AssetStatus.Broken)">@(AssetStatus.Broken.ToString())</MudSelectItem>
-                        <MudSelectItem Value="@(AssetStatus.Deprecated)">@(AssetStatus.Deprecated.ToString())
-                        </MudSelectItem>
+                        <MudSelectItem Value="@(AssetStatus.Available)"><MudText Color="Color.Success">@(AssetStatus.Available.ToString())</MudText></MudSelectItem>
+                        <MudSelectItem Value="@(AssetStatus.Taken)"><MudText Color="Color.Info">@(AssetStatus.Taken.ToString())</MudText></MudSelectItem>
+                        <MudSelectItem Value="@(AssetStatus.Broken)"><MudText Color="Color.Error">@(AssetStatus.Broken.ToString())</MudText></MudSelectItem>
+                        <MudSelectItem Value="@(AssetStatus.Deprecated)">@(AssetStatus.Deprecated.ToString())</MudSelectItem>
                     </MudSelect>
                 </MudStack>
                 <MudStack Row="true" AlignItems="AlignItems.Center">
                     <MudText>
                         <b>Assigned To: </b>
                     </MudText>
-                    <MudSelect T="UserDisplay" Variant="Variant.Outlined" Margin="Margin.Dense"
-                        Value="@assetSerial.Employee" ValueChanged="OnAssignedPersonChanged">
-                        @foreach (var userDisplay in UserDisplays)
-                        {
-                            <MudSelectItem Value="@userDisplay">@($"{userDisplay.FullName}")</MudSelectItem>
-                        }
-                    </MudSelect>
+                    <MudAutocomplete Value="@assetSerial.Employee" T="UserDisplay" Margin="Margin.Dense" SearchFunc="@SearchEmployees" Variant="Variant.Outlined" ValueChanged="@(e => OnAssignedPersonChanged(e))"/>
                 </MudStack>
             }
         </MudStack>
@@ -84,13 +77,11 @@
     [Parameter] public EventCallback OnSaveButtonClicked { get; set; }
     GetAssetSerial assetSerial = null!;
     private IEnumerable<UserDisplay> UserDisplays = [];
-    private bool showDrawer;
     private bool isLoading = true;
     private bool isSerialHasChanged = false;
 
     protected override async Task OnInitializedAsync()
     {
-        showDrawer = true;
         UserDisplays = (await EmployeesService.GetEmployees()).Select(x => new UserDisplay
         {
             UserName = x.UserName,
@@ -129,15 +120,32 @@
 
     private async Task OnSave()
     {
+        if (assetSerial.Status == AssetStatus.Taken && assetSerial.Employee is null)
+        {
+            Snackbar.Configuration.PositionClass = Defaults.Classes.Position.TopEnd;
+            Snackbar.Add("Please, select the Employee", Severity.Error);
+            return;
+        }
+
         await AssetSerialService.UpdateSerial(new()
         {
             Id = assetSerial.Id,
             Status = assetSerial.Status,
             UserDisplay = assetSerial.Employee
         });
+
         Snackbar.Configuration.PositionClass = Defaults.Classes.Position.TopEnd;
-        Snackbar.Add("Serial succesfull updated", Severity.Success);
+        Snackbar.Add("Serial succesfully updated", Severity.Success);
         await OnSaveButtonClicked.InvokeAsync();
         NavigationManager.NavigateTo("/assets");
+    }
+
+    private async Task<IEnumerable<UserDisplay>> SearchEmployees(string value)
+    {
+        if (string.IsNullOrEmpty(value))
+            return await Task.FromResult(UserDisplays.ToArray());
+        
+        value = value.ToUpper().Trim();
+        return await Task.FromResult(UserDisplays.Where(x => x.FirstName.ToUpper().Contains(value) || x.LastName.ToUpper().Contains(value)));
     }
 }
