--- a/src/Web/Client/Shared/MainLayout.razor
+++ b/src/Web/Client/Shared/MainLayout.razor
@@ -16,7 +16,8 @@
         <MudPaper Width="250px" Elevation="0" Class="py-3">
            <MudNavMenu Color="Color.Info">
                <MudNavLink Href="/assets" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Assignment">Assets</MudNavLink>
-                <MudNavLink Href="/employees" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AssignmentInd">Employees</MudNavLink>
+               <MudNavLink Href="/employees" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AssignmentInd">Employees</MudNavLink>
+               <MudNavLink Href="/report" Match="NavLinkMatch.Prefix" Icon="@Icons.Custom.FileFormats.FileDocument">Reports</MudNavLink>
                <MudNavGroup Icon="@Icons.Material.Filled.Settings" Title="Settings"  Expanded="true">
                    <MudNavLink Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Category"  Href="/settings/asset-types">Asset types</MudNavLink>
                     <MudNavLink Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Tag" Href="/settings/tags">Tags</MudNavLink>
