--- a/src/Web/Client/Pages/Report.razor
+++ b/src/Web/Client/Pages/Report.razor
@@ -5,14 +5,14 @@
 @inject IReportService ReportService
 
 
-<MudTable Items="@Purches" Hover="true" Dense="true" FixedHeader="true">
+<MudTable Items="@_purches" Hover="true" Dense="true" FixedHeader="true">
     <ToolBarContent>
         <MudStack Row="true" Justify="Justify.SpaceBetween">
             <MudFab StartIcon="@Icons.Material.Filled.KeyboardArrowLeft" Size="Size.Small" OnClick="MinusTwoDays"/>
             <MudDateRangePicker @bind-DateRange="_dateRange" Variant="Variant.Outlined" Margin="Margin.Dense" DateChanged="HandleDateChanged" MaxDate="DateTime.Today"/>
             <MudFab StartIcon="@Icons.Material.Filled.KeyboardArrowRight" Size="Size.Small" OnClick="AddTwoDays"/>
             <MudSelect Margin="Margin.Dense" T="string" Label="Type" Variant="Variant.Outlined" @bind-Value="@SelectedType" @onchange="HandleSelectChange">
-                @foreach (var type in Types)
+                @foreach (var type in _types)
                 {
                     <MudSelectItem Value="@type.Name">@type.Name</MudSelectItem>
                 }
@@ -23,7 +23,7 @@
                 <MudText>Click me</MudText>
             </MudButton>
         </MudStack>
-        <h5>All units: @Purches.Count</h5>
+        <h5>All units: @_purches.Count</h5>
     </ToolBarContent>
     <HeaderContent>
         <MudTh>Type</MudTh>
@@ -70,32 +70,27 @@
 @code {
 
     private bool _loading = true;
-    private DateRange _dateRange = new DateRange(DateTime.Today, DateTime.Today.AddDays(2));
-
+    private DateRange _dateRange = new DateRange(DateTime.Today.AddDays(-2), DateTime.Today);
     private string? SelectedType { get; set; }
-
-    private List<GetAssetType> Types = new List<GetAssetType>();
-
-    private List<GetPurchasedAssets> Purches = new List<GetPurchasedAssets>();
-
-    private bool _processing = false;
-    private decimal TotalPrice => Purches.Sum(item => item.Price);
-    
+    private List<GetAssetType> _types = new List<GetAssetType>();
+    private List<GetPurchasedAssets> _purches = new List<GetPurchasedAssets>();
+    private readonly bool _processing = false;
+    private decimal TotalPrice => _purches.Sum(item => item.Price);
 
     protected override async Task OnInitializedAsync()
     {
-        Types = await ReportService.Fetch2();
-        Types.Add(new GetAssetType(){Name = "All"});
+        _types = await ReportService.Fetch2();
+        _types.Add(new GetAssetType(){Name = "All"});
         _loading = true;
     }
 
     private void HandleSelectChange(ChangeEventArgs args)
     {
-        if (args.Value.ToString() == "All")
+        if (args.Value?.ToString() == "All")
         {
             SelectedType = null;
         }
-        SelectedType = args.Value.ToString();
+        SelectedType = args.Value?.ToString();
         StateHasChanged();
     }
 
@@ -105,7 +100,7 @@
         StateHasChanged();
     }
 
-    private async Task MinusTwoDays()
+    private void MinusTwoDays()
     {
         _dateRange = new DateRange(_dateRange.Start?.AddDays(-2), _dateRange.End?.AddDays(-2));
         StateHasChanged();
@@ -114,13 +109,12 @@
     async Task ProcessSomething()
     {
         _loading = true;
-        var id = Types.FirstOrDefault(x => x.Name == SelectedType)?.Id;
-        Purches = await ReportService.GetPurchases(new PurchasedAssetsRequest()
+        var id = _types.FirstOrDefault(x => x.Name == SelectedType)?.Id;
+        _purches = await ReportService.GetPurchases(new PurchasedAssetsRequest()
         {
             FromDate = _dateRange.Start, ToDate = _dateRange.End, AssetTypeId = id
         });
         _loading = false;
         StateHasChanged();
     }
-
 }
