--- a/src/Web/Client/Pages/Employees.razor
+++ b/src/Web/Client/Pages/Employees.razor
@@ -54,6 +54,8 @@ else
         <MudText>Phone</MudText>
         <MudLink Href="@($"tel:{_getEmployee.PhoneNumber}")">@_getEmployee.PhoneNumber</MudLink>
     </MudStack>
+
+    <EmployeeAssign />
 }
 
 
