--- a/src/Web/Client/Pages/Report.razor
+++ b/src/Web/Client/Pages/Report.razor
@@ -3,6 +3,7 @@
 @using MRA.AssetsManagement.Web.Client.Services.ReportService
 @using MRA.AssetsManagement.Web.Shared.Purchas
 @inject IReportService ReportService
+@inject IAssetTypesService AssetTypesService
 
 <MudCard Class="pa-3">
     <MudCartContent>
